<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".MainActivity">

    <TextView
        android:text="@string/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/textView2"
        android:layout_alignEnd="@+id/textView2"
        android:paddingTop="11dp"
        android:paddingBottom="11dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/name"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="false"
        android:inputType="text"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="false"
        android:layout_toRightOf="@id/textView"
        android:layout_marginLeft="5dp"/>


    <TextView
        android:text="@string/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:layout_below="@+id/name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@id/textView"
        android:paddingTop="11dp"
        android:paddingBottom="11dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/address"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="false"
        android:layout_below="@+id/name"
        android:inputType="text|textPostalAddress"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="false"
        android:layout_toRightOf="@id/textView"
        android:layout_marginLeft="5dp"/>


    <TextView
        android:text="@string/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:layout_below="@+id/textView5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@id/textView"
        android:paddingTop="11dp"
        android:paddingBottom="11dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/phone"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="false"
        android:layout_below="@+id/address"
        android:inputType="phone|text"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="false"
        android:layout_toRightOf="@id/textView"
        android:layout_marginLeft="5dp"/>


    <TextView
        android:text="@string/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:id="@+id/textView6"
        android:paddingTop="11dp"
        android:paddingBottom="11dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@id/textView"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/email"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="false"
        android:layout_below="@+id/phone"
        android:inputType="textEmailAddress|text"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="false"
        android:layout_toRightOf="@id/textView"
        android:layout_marginLeft="5dp"/>


    <TextView
        android:text="@string/sex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:layout_below="@+id/textView6"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@id/textView"
        android:paddingTop="11dp"
        android:paddingBottom="11dp"/>


    <TextView
        android:text="@string/accommodations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingTop="11dp"
        android:paddingBottom="11dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/accommodations"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="false"
        android:layout_below="@+id/sex"
        android:inputType="text"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="false"
        android:layout_toRightOf="@id/textView"
        android:layout_marginLeft="5dp"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sex"
        android:spinnerMode="dropdown"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="false"
        android:layout_below="@+id/email"
        android:inputType="text"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="false"
        android:layout_toRightOf="@id/textView"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="11dp"
        android:layout_marginBottom="11dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/commit"
        android:id="@+id/commit"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rollback"
        android:id="@+id/rollback"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/commit"
        android:layout_toStartOf="@+id/commit"/>


</RelativeLayout>
